# humourscope

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.backup.1760183838  pyproject.backup.1760184075  pyproject.backup.1760184934  pyproject.toml  streamlit_app.py
data/uploads/: reddit_2025-08_funny_antimemes_ProgrammerHumor.sample.parquet
scripts/: filter_pushshift_to_parquet.py
src/humourscope/: config.py  data_loader.py  ingest.py  lexicon.py  models.py  preprocess.py  topic_model.py
tests/: test_clean.py
